extension/skin/classic/firebug.css
/* ... */
#fbBreakOnNextButton {
    margin-bottom: 1px;
    opacity: 0.8;
    padding-right: 2px;
    padding-left: 2px;
        /* The default styling does not always keep button size contant or image
       position constant, e.g. when [checked="true"].  These numbers were
       chosen to keep them constant against the default winstripe styling. */
    padding-top: 4px;
    padding-bottom: 2px;
    -moz-padding-start: 4px;
    -moz-padding-end: 2px;
}

/*************************************************************************************************/
/* Command Line */

#fbCommandArrow {
    margin: 2px 0 2px 7px;
    font-family: monospace;
    color: #0000FF;
}

.fbCommandLine {
    -moz-appearance: none;
    margin: 4px 0 0 0;
    padding: 0 4px;
    border: none;
    font-family: monospace;
    font-size: 12px;
    direction: ltr;
    width: 100%;
    background: none repeat scroll 0% 0% transparent;
    position: relative;
    z-index: 3;
}

#fbCommandEditor {
    margin: 0;
    font-family: monospace;
    direction: ltr;
}

#fbCommandLine > .textbox-input-box > .textbox-textarea {
    overflow: hidden;
}

.fbCommandHtmlBox {
    position: relative;
    margin-right: 7px;
}

.fbCommandHtmlBox .background {
    position: relative;
    background: none repeat scroll 0% 0% transparent;
}

#fbCommandLineCompletion {
    position: absolute;
    z-index: 1;
    color: silver;
}

.fbCommandHtmlBox .offScreen {
    position: absolute;
    top: -900px;
    left: -9000px;
    max-width: 3000px;
    overflow: hidden;
    width: auto;
}

#misspell {
    display: none !important;
}

/*************************************************************************************************/
/* Toolbar */

#fbToolbar {
    padding-left: 4px;
}

#fbToolbarInner {
    overflow: hidden;
}

/*************************************************************************************************/
/* Search Box */

#fbSearchBox {
    margin-left: 0;
    margin-right: 6px;
    min-width: 100px;
}

.fbsearch-textbox[status="notfound"] {
    background-color: #FF6666 !important;
    color: #FFFFFF;
}

.fbsearch-textbox[status="wraparound"] {
    background-image: url(chrome://global/skin/icons/wrap.png);
    background-position: -moz-calc(100% - 5px) center;
    background-repeat: no-repeat;
}

.fbsearch-textbox {
    -moz-appearance: none;
    margin: 0 0px 1px 2px;
    border: 1px solid;
    -moz-border-radius: 5px;  /* Matched to the a11y outline impl */
    -moz-border-top-colors: #96969D;
    -moz-border-right-colors: #96969D;
    -moz-border-bottom-colors: #96969D;
    -moz-border-left-colors: #96969D;
    font: message-box;
    font-size: 11px;
    direction: ltr;
}

.fbsearch-icon {
    cursor: default!important;
    background: url(chrome://firebug/skin/search.png) no-repeat;
    width: 16px;
    height: 16px;
}

.fbsearch-textbox[active-search='true'] > .fbsearch-icon {
    background: url(chrome://firebug/skin/search-close.png) no-repeat;
}

#fbSearchOptionsPanel {

}

.fbsearch-options-label {

}

.fbsearch-options-buttons {

}

textbox[type="fbSearchBox"] > panel {
    /* This prevents the drop shadow from appearing See nsLayoutUtils::GetFrameTransparency*/
    -moz-border-radius: 1px;
}

.fbSearchBox-attention textbox {
    color: red;
    font-weight: bold;
}

.fbsearch-splitter {
    min-width: 6px;
    -moz-margin-start: -3px;
    border: medium none;
    background: none repeat scroll 0% 0% transparent;
}

/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
/* Case sensitive/insensitive search */

#fbSearchBoxIsSensitive {
    display: none;
}

.fbSearchBox-autoSensitive #fbSearchBoxIsSensitive {
    display: block;
}

.fbSearchBox-autoSensitive #fbSearchBoxIsNotSensitive {
    display: none;
}

/*************************************************************************************************/

#fbCommandBox {
    border-top: 1px solid #CCCCCC;
    background-color: -moz-field;
    color: -moz-fieldtext;
}

/*************************************************************************************************/

.toolbar-image-button {
}

.toolbar-image-button > .toolbarbutton-icon {
}

.toolbar-image-button > .toolbarbutton-text {
}

.fbURLMenuItem { /* let file names be as long as need be */
    max-width: none;
}

/************************************************************************************************/
/* Firebug toolbar buttons */

#fbInspectButton {
    list-style-image: url("chrome://firebug/skin/Templarian_inspector.png");
    -moz-image-region: rect(0, 16px, 16px, 0);
}

#fbInspectButton:hover,
#fbInspectButton:active {
    -moz-image-region: rect(16px, 16px, 32px, 0);
}

#fbBreakOnNextButtonOld {
    list-style-image: url("chrome://firebug/skin/breakNextDisabled.png");
}

/*************************************************************************************************/
/* Debugger buttons */

#fbDebuggerButtons {
    margin-right: 2px;
}

#fbDebuggerButtons toolbarbutton {
    -moz-image-region: rect(0, 16px, 16px, 0);
}

#fbDebuggerButtons toolbarbutton:hover,
#fbDebuggerButtons toolbarbutton:active {
    -moz-image-region: rect(16px, 16px, 32px, 0);
}

#fbDebuggerButtons toolbarbutton[disabled="true"] {
    -moz-image-region: rect(32px, 16px, 48px, 0);
}

#fbRerunButton {
    list-style-image: url(chrome://firebug/skin/rerun.png);
}

#fbContinueButton {
    list-style-image: url(chrome://firebug/skin/continue.png);
}

#fbStepOverButton {
    list-style-image: url(chrome://firebug/skin/stepOver.png);
}

#fbStepIntoButton {
    list-style-image: url(chrome://firebug/skin/stepInto.png);
}

#fbStepOutButton {
    list-style-image: url(chrome://firebug/skin/stepOut.png);
}
/* ... */

